Bug 477083 - Color Management KCM is not available under Plasma 6 because it does not yet support Qt6
Summary: Color Management KCM is not available under Plasma 6 because it does not yet ...
Status: RESOLVED FIXED
Alias: None
Product: colord-kde
Classification: Unmaintained
Component: Systems Settings Module (KCM) (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-16 11:10 UTC by kodatarule
Modified: 2024-01-09 15:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kodatarule 2023-11-16 11:10:24 UTC
SUMMARY
There used to be color setting where you could load an ICC profile for color correction, that option now seems absent in plasma 6.



Operating System: EndeavourOS 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.1-x64v3-xanmod1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5800X3D 8-Core Processor
Memory: 31,3 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3090/PCIe/SSE2

Nvidia driver version: 545.29.02
Comment 1 Nicolas Fella 2023-11-16 15:31:32 UTC
I assume you are looking for the "Color Management" settings module?

That still exists, but probably doesn't show up for you because it's not build against Qt6
Comment 3 kodatarule 2023-11-16 21:24:37 UTC
Thank you for the update, Yes it is indeed the "Color Management" the wayland alternative to load ICC profiles works, I was just surprised that the option was missing from plasma 6 under xorg
Comment 4 Nicolas Fella 2024-01-09 15:44:13 UTC
Git commit 4f90164c418551bac6d3ed5661799663057b5cfb by Nicolas Fella.
Committed on 09/01/2024 at 16:43.
Pushed by nicolasfella into branch 'master'.

Port to Qt6

M  +2    -2    .gitlab-ci.yml
M  +9    -9    .kde-ci.yml
M  +6    -12   CMakeLists.txt
M  +4    -6    colord-kcm/CMakeLists.txt
M  +1    -1    colord-kcm/ColordKCM.cpp
M  +2    -2    colord-kcm/ColordKCM.h
M  +0    -1    colord-kcm/DeviceDescription.cpp
M  +1    -1    colord-kcm/DeviceModel.cpp
M  +1    -1    colord-kcm/ProfileModel.cpp
R  +22   -7    colord-kcm/ui/ProfileMetaDataView.qml [from: colord-kcm/package/contents/ui/ProfileMetaDataView.qml - 088% similarity]
R  +92   -78   colord-kcm/ui/main.qml [from: colord-kcm/package/contents/ui/main.qml - 070% similarity]
M  +3    -9    colord-kded/CMakeLists.txt
M  +2    -3    colord-kded/ColorD.cpp
M  +4    -3    colord-kded/Edid.cpp
M  +10   -10   colord-kded/Output.cpp
M  +3    -3    icc-importer/CMakeLists.txt

https://invent.kde.org/graphics/colord-kde/-/commit/4f90164c418551bac6d3ed5661799663057b5cfb