Port to Qt6

BUG: 477083